syntax = "proto3";
package zigbeealliance.distributedcomplianceledger.pki;

option go_package = "github.com/zigbee-alliance/distributed-compliance-ledger/x/pki/types";

message ChildCertificates {
  string issuer = 1; 
  string authority_key_id = 2; 
  repeated string cert_ids = 3; 
  
}

